chore: Update forward pass to perfect

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -160,10 +160,10 @@
     "        error = y - target\n",
     "        err_normalized = error.abs().mean().item() / target_max\n",
     "        mtx_diff = self.tile.get_weights() - target_weights\n",
-    "        l2_norm = torch.linalg.matrix_norm(mtx_diff, ord=\"nuc\")\n",
-    "        log.debug(f\"Error: {l2_norm}\")\n",
+    "        nuc_norm = torch.linalg.matrix_norm(mtx_diff, ord=\"nuc\")\n",
+    "        log.debug(f\"Error: {nuc_norm}\")\n",
     "        # log.debug(f\"Error: {err_normalized}\")\n",
-    "        if tolerance is not None and err_normalized < tolerance:\n",
+    "        if tolerance is not None and nuc_norm < tolerance:\n",
     "            break\n",
     "        self.tile.update(x, error, False)  # type: ignore\n",
     "\n",
@@ -199,6 +199,7 @@
     "def program_weights_svd(\n",
     "    self,\n",
     "    max_iter: int = 100,\n",
+    "    use_rank_as_criterion: bool = False,\n",
     "    tolerance: Optional[float] = 0.01,\n",
     "    w_init: Union[float, Tensor] = 0.0,\n",
     "    rank_atol: Optional[float] = 1e-2,\n",
@@ -209,7 +210,7 @@
     "    Perform singular value decomposition (SVD) based weight programming.\n",
     "\n",
     "    Args:\n",
-    "        from_reference (bool, optional): Flag indicating whether to use reference combined weights. Defaults to True.\n",
+    "        use_rank_as_criterion (bool, optional): Use rank as stopping criterion. If False, use max_iter. Defaults to False.\n",
     "        max_iter (int, optional): Maximum number of iterations. Defaults to 100.\n",
     "        tolerance (float, optional): Tolerance for convergence. Defaults to 0.01.\n",
     "        w_init (Union[float, Tensor], optional): Initial value for weights. Defaults to 0.01.\n",
@@ -221,6 +222,7 @@
     "        None\n",
     "    \"\"\"\n",
     "    target_weights = self.tile.get_weights()\n",
+    "    # target_weights = self.tile.get_weights() if target_weights is None else target_weights\n",
     "\n",
     "    if isinstance(w_init, Tensor):\n",
     "        self.tile.set_weights(w_init)\n",
@@ -236,14 +238,15 @@
     "    # since tile.update() updates w -= lr*delta_w so flip the sign\n",
     "    diff = self.tile.get_weights() - target_weights\n",
     "    # normalize diff matrix\n",
-    "    U, S, Vh = torch.linalg.svd(diff, full_matrices=False)\n",
+    "    U, S, Vh = torch.linalg.svd(diff.double(), full_matrices=False)\n",
     "    # rank = torch.linalg.matrix_rank(diff)\n",
     "    if rank_atol is None:\n",
     "        rank_atol = S.max() * max(diff.shape) * torch.finfo(S.dtype).eps\n",
     "\n",
     "    rank = torch.sum(S > rank_atol).item()\n",
     "    i = 0\n",
-    "    for _ in range(min(max_iter, rank) * 3):\n",
+    "    max_iter = min(max_iter, rank) if use_rank_as_criterion else max_iter\n",
+    "    for _ in range(max_iter):\n",
     "        u = U[:, i]\n",
     "        v = Vh[i, :]\n",
     "        # uv_ratio = torch.sqrt(u/v)\n",
@@ -252,19 +255,19 @@
     "        v *= uv_ratio * sqrt_s\n",
     "        u *= sqrt_s / uv_ratio\n",
     "        u1, v1 = compensate_half_selection(u), compensate_half_selection(v)\n",
-    "        self.tile.update(v1, u1, False)\n",
+    "        self.tile.update(v1.float(), u1.float(), False)\n",
     "\n",
     "        # TODO: self.get_weights()\n",
     "        diff = self.tile.get_weights() - target_weights\n",
-    "        U, S, Vh = torch.linalg.svd(diff, full_matrices=False)\n",
-    "        l2_norm = S.sum() if svd_once else torch.linalg.matrix_norm(diff, ord=\"nuc\")\n",
-    "        log.debug(f\"Error: {l2_norm}\")\n",
+    "        U, S, Vh = torch.linalg.svd(diff.double(), full_matrices=False)\n",
+    "        nuc_norm = S.sum() if svd_once else torch.linalg.matrix_norm(diff, ord=\"nuc\")\n",
+    "        log.debug(f\"Error: {nuc_norm}\")\n",
     "        # y = self.tile.forward(x_values, False)\n",
     "        # # TODO: error와 weight 2norm 사이 관계 분석\n",
     "        # error = y - target_values\n",
     "        # err_normalized = error.abs().mean().item() / target_max\n",
     "        # log.debug(f\"Error: {err_normalized}\")\n",
-    "        if tolerance is not None and l2_norm < tolerance:\n",
+    "        if tolerance is not None and nuc_norm < tolerance:\n",
     "            break\n",
     "        elif svd_once:\n",
     "            i += 1\n",
@@ -301,12 +304,12 @@
     "from src.utils.logging_utils import LogCapture\n",
     "\n",
     "\n",
-    "def extract_error(log_list):\n",
+    "def extract_error(log_list, prefix: str = \"Error: \") -> list:\n",
     "    err_list = []\n",
     "\n",
     "    for log in log_list:\n",
-    "        if \"Error\" in log:\n",
-    "            err_list.append(float(re.findall(r\"Error: ([0-9.e-]+)\", log)[0]))\n",
+    "        if prefix in log:\n",
+    "            err_list.append(float(re.findall(prefix + r\"([0-9.e-]+)\", log)[0]))\n",
     "\n",
     "    return err_list"
    ]
@@ -341,12 +344,15 @@
     "\n",
     "input_size = 100\n",
     "output_size = 50\n",
-    "batch_size = 5\n",
+    "batch_size = 1\n",
     "\n",
     "# generate low rank matrix\n",
-    "rank = 20\n",
-    "u, s, v = torch.svd(torch.randn(input_size, output_size))\n",
-    "w = torch.mm(u[:, :rank], torch.mm(torch.diag(s[:rank]), v[:, :rank].t()))"
+    "rank = 50\n",
+    "w = torch.randn(input_size, output_size).double()\n",
+    "w.clamp_(-1, 1)\n",
+    "if rank < min(w.shape):\n",
+    "    u, s, v = torch.svd(w)\n",
+    "    w = torch.mm(u[:, :rank], torch.mm(torch.diag(s[:rank]), v[:, :rank].t()))"
    ]
   },
   {
@@ -362,12 +368,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from aihwkit.simulator.configs import SingleRPUConfig\n",
+    "from aihwkit.simulator.configs import FloatingPointRPUConfig, SingleRPUConfig\n",
     "from aihwkit.simulator.configs.devices import (\n",
     "    ConstantStepDevice,\n",
     "    DriftParameter,\n",
     "    ExpStepDevice,\n",
+    "    FloatingPointDevice,\n",
     "    IdealDevice,\n",
+    "    SimpleDriftParameter,\n",
     ")\n",
     "from aihwkit.simulator.configs.utils import (\n",
     "    InputRangeParameter,\n",
@@ -377,17 +385,21 @@
     "from aihwkit.simulator.parameters.enums import PulseType\n",
     "from aihwkit.simulator.presets.configs import IdealizedPreset, PCMPreset\n",
     "from aihwkit.simulator.presets.devices import IdealizedPresetDevice\n",
+    "from aihwkit.simulator.tiles import FloatingPointTile\n",
     "from aihwkit.simulator.tiles.analog import AnalogTile\n",
     "\n",
     "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
-    "# device_cfg = ExpStepDevice()\n",
     "# device_cfg = IdealDevice()\n",
-    "device_cfg = IdealizedPresetDevice()\n",
+    "device_cfg = ConstantStepDevice()\n",
     "update_cfg = UpdateParameters(pulse_type=PulseType.STOCHASTIC_COMPRESSED)\n",
-    "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg, pre_post=pre_post_cfg)\n",
-    "# rpuconfig = SingleRPUConfig()\n",
+    "\n",
+    "# rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg, pre_post=pre_post_cfg)\n",
+    "# rpuconfig = FloatingPointRPUConfig()\n",
+    "rpuconfig = SingleRPUConfig(device=device_cfg, update=update_cfg)\n",
+    "rpuconfig.forward.is_perfect = True\n",
+    "rpuconfig.forward.out_noise = 0.0\n",
     "# rpuconfig = IdealizedPreset()\n",
-    "atile = AnalogTile(output_size, input_size, rpu_config=rpuconfig)  # with periphery\n",
+    "atile = AnalogTile(output_size, input_size, rpu_config=rpuconfig)  # without periphery\n",
     "atile_dic = {}\n",
     "atile.state_dict(atile_dic)\n",
     "atile2 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
@@ -401,8 +413,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "rpuconfig.device.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from aihwkit.simulator.tiles.periphery import TileWithPeriphery\n",
     "\n",
+    "# enroll the programming methods\n",
     "atile.program_weights = program_weights_gdp2.__get__(atile, TileWithPeriphery)\n",
     "atile2.program_weights = program_weights_svd.__get__(atile2, TileWithPeriphery)"
    ]
@@ -414,8 +436,8 @@
    "outputs": [],
    "source": [
     "with LogCapture() as logc:\n",
-    "    atile.tile.set_weights(w.T)\n",
-    "    atile.program_weights(batch_size=batch_size, tolerance=1e-5, max_iter=300)\n",
+    "    atile.tile.set_weights(w.clone().T)\n",
+    "    atile.program_weights(batch_size=batch_size, tolerance=1e-10, max_iter=1000)\n",
     "    log_list1 = logc.get_log_list()"
    ]
   },
@@ -427,8 +449,10 @@
    "source": [
     "with LogCapture() as logc:\n",
     "    # atile2.set_weights(weight=w, realistic=True)\n",
-    "    atile2.tile.set_weights(w.T)\n",
-    "    atile2.program_weights(max_iter=300, tolerance=1e-5)\n",
+    "    atile2.tile.set_weights(w.clone().T)\n",
+    "    atile2.program_weights(\n",
+    "        max_iter=1000, tolerance=1e-10, svd_once=False, target_weights=w.clone().T\n",
+    "    )\n",
     "    log_list2 = logc.get_log_list()"
    ]
   },
@@ -438,8 +462,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "W = (atile.tile.get_weights() - w.T, atile2.tile.get_weights() - w.T)\n",
-    "plot_singular_values(W)"
+    "W = (w.T - atile.tile.get_weights(), w.T - atile2.tile.get_weights())\n",
+    "# plot_singular_values(W)"
    ]
   },
   {
@@ -451,6 +475,15 @@
     "print(\n",
     "    f\" nulcear norm of atile: {torch.linalg.matrix_norm(W[0], ord='nuc')}, atile2: {torch.linalg.matrix_norm(W[1], ord='nuc')}\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_list2[-10:]"
    ]
   },
   {
@@ -484,14 +517,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for batch_size in [1, 5, 10, 20, 50, input_size]:\n",
+    "for batch_size_ in [1, 5, 10, 20, 50, input_size]:\n",
     "    with LogCapture() as logc:\n",
     "        atile.tile.set_weights(w.T)\n",
-    "        atile.program_weights(batch_size=batch_size)\n",
+    "        atile.program_weights(batch_size=batch_size_)\n",
     "        log_list = logc.get_log_list()\n",
     "    err_list = extract_error(log_list)\n",
     "    num_iter = len(err_list)\n",
-    "    plt.semilogy(err_list, label=f\"batch_size={batch_size}\")\n",
+    "    plt.semilogy(err_list, label=f\"batch_size={batch_size_}\")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Iteration\")\n",
     "plt.ylabel(\"Nuclear norm of weight error\")\n",
@@ -500,6 +533,45 @@
     "        input_size, output_size, rank, atile.rpu_config.device.__class__.__name__\n",
     "    )\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### d2d variaton"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print dataclass fields\n",
+    "atile.rpu_config.device.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w.T[:5, :5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check whether the element wise perturbation is applied\n",
+    "\n",
+    "atile.tile.set_weights(w.T)\n",
+    "wtile = atile.tile.get_weights()\n",
+    "torch.allclose(wtile, w.T)"
    ]
   },
   {
