feat: Add wandb logger

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -61,9 +61,12 @@
     "output_size = 50\n",
     "batch_size = 1\n",
     "\n",
+    "tol = 1e-4\n",
+    "max_iter = 1000\n",
+    "\n",
     "# generate low rank matrix\n",
-    "rank = 50\n",
-    "w = torch.randn(input_size, output_size).double()\n",
+    "rank = 5\n",
+    "w = torch.randn(input_size, output_size)\n",
     "w.clamp_(-1, 1)\n",
     "if rank < min(w.shape):\n",
     "    u, s, v = torch.svd(w)\n",
@@ -110,14 +113,15 @@
     "from aihwkit.simulator.tiles import FloatingPointTile\n",
     "from aihwkit.simulator.tiles.analog import AnalogTile\n",
     "\n",
-    "pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
+    "# pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
+    "device_cfg = ExpStepDevice()\n",
     "# device_cfg = IdealDevice()\n",
-    "device_cfg = IdealizedPresetDevice()\n",
-    "update_cfg = UpdateParameters(pulse_type=PulseType.STOCHASTIC_COMPRESSED)\n",
-    "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg, pre_post=pre_post_cfg)\n",
-    "rpuconfig.forward.is_perfect = True\n",
+    "update_cfg = UpdateParameters(pulse_type=PulseType.MEAN_COUNT)\n",
+    "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg)\n",
+    "# rpuconfig.forward.is_perfect = True\n",
+    "rpuconfig.device.w_max_dtod = 0\n",
+    "rpuconfig.device.w_min_dtod = 0\n",
     "# rpuconfig = SingleRPUConfig()\n",
-    "# rpuconfig = IdealizedPreset()\n",
     "atile = AnalogTile(output_size, input_size, rpu_config=rpuconfig)  # with periphery\n",
     "atile_dic = {}\n",
     "atile.state_dict(atile_dic)\n",
@@ -134,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rpuconfig.forward.__dict__"
+    "# rpuconfig.device.__dict__"
    ]
   },
   {
@@ -143,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(atile2.tile.get_info())"
+    "# print(atile2.tile.get_info())"
    ]
   },
   {
@@ -170,7 +174,7 @@
    "source": [
     "with LogCapture() as logc:\n",
     "    atile.tile.set_weights(w.clone().T)\n",
-    "    atile.program_weights(batch_size=batch_size, tolerance=1e-10, max_iter=1000)\n",
+    "    atile.program_weights(batch_size=batch_size, tolerance=tol, max_iter=max_iter)\n",
     "    log_list1 = logc.get_log_list()"
    ]
   },
@@ -182,8 +186,8 @@
    "source": [
     "with LogCapture() as logc:\n",
     "    # atile2.set_weights(weight=w, realistic=True)\n",
-    "    atile2.tile.set_weights(w.clone().T)\n",
-    "    atile2.program_weights(max_iter=1000, tolerance=1e-10, svd_once=False)\n",
+    "    atile2.tile.set_weights(w.clone().double().T)\n",
+    "    atile2.program_weights(max_iter=max_iter, tolerance=tol, svd_once=False)\n",
     "    log_list2 = logc.get_log_list()"
    ]
   },
@@ -193,10 +197,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with LogCapture() as logc:\n",
-    "    atile3.tile.set_weights(w.clone().T)\n",
-    "    atile3.program_weights(tolerance=1e-10, max_iter=10)\n",
-    "    log_list3 = logc.get_log_list()"
+    "# with LogCapture() as logc:\n",
+    "#     atile3.tile.set_weights(w.clone().T)\n",
+    "#     atile3.program_weights(tolerance=1e-10, max_iter=10)\n",
+    "#     log_list3 = logc.get_log_list()"
    ]
   },
   {
@@ -208,7 +212,7 @@
     "W = (\n",
     "    w.T - atile.tile.get_weights(),\n",
     "    w.T - atile2.tile.get_weights(),\n",
-    "    w.T - atile3.tile.get_weights(),\n",
+    "    # w.T - atile3.tile.get_weights(),\n",
     ")\n",
     "plot_singular_values(W)"
    ]
@@ -223,7 +227,7 @@
     "    f\"nuclear norm of \\n\"\n",
     "    f\"atile: {torch.linalg.matrix_norm(W[0], ord='nuc')},\\n\"\n",
     "    f\"atile2: {torch.linalg.matrix_norm(W[1], ord='nuc')},\\n\"\n",
-    "    f\"atile3: {torch.linalg.matrix_norm(W[2], ord='nuc')}\"\n",
+    "    # f\"atile3: {torch.linalg.matrix_norm(W[2], ord='nuc')}\"\n",
     ")"
    ]
   },
@@ -233,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_list3[-10:]"
+    "log_list1[-10:]"
    ]
   },
   {
@@ -242,15 +246,104 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for log in [log_list1, log_list2, log_list3]:\n",
+    "for log in [log_list1, log_list2]:\n",
     "    err = extract_error(log)\n",
     "    plt.semilogy(err)\n",
     "# set legend\n",
-    "plt.legend([f\"gdp-seq(batchsize {batch_size})\", \"svd\", \"ekf\"])\n",
+    "plt.legend([f\"gdp-seq(batchsize {batch_size})\", \"svd\"])\n",
     "plt.xlabel(\"Iteration\")\n",
     "plt.ylabel(\"Nuclear norm of weight error (sum of singular values)\")\n",
     "plt.title(\"Error vs Iteration @ {}x{}, rank={}\".format(input_size, output_size, rank))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## WandB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rpuconf2dict(rpuconfig, max_depth=2, current_depth=0):\n",
+    "    if current_depth > max_depth:\n",
+    "        return rpuconfig\n",
+    "    result = {}\n",
+    "    for key, val in rpuconfig.__dict__.items():\n",
+    "        if isinstance(val, (float, int, str, bool)):\n",
+    "            result[key] = val\n",
+    "        elif isinstance(val, type):\n",
+    "            result[key] = repr(val)\n",
+    "        else:\n",
+    "            result[key] = rpuconf2dict(val, max_depth, current_depth + 1)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wandb login"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf = {\n",
+    "    **rpuconf2dict(rpuconfig, max_depth=1),\n",
+    "    \"matrix\": {\"input_size\": input_size, \"output_size\": output_size, \"rank\": rank},\n",
+    "    \"methods\": {\"tolerance\": tol, \"max_iter\": max_iter, \"batch_size\": batch_size},\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "import wandb\n",
+    "\n",
+    "with wandb.init(project=\"prog-scheme\", entity=\"spk\", config=conf, dir=\"../../logs\") as run:\n",
+    "    err1 = extract_error(log_list1)  # GDP error\n",
+    "    err2 = extract_error(log_list2)  # SVD error\n",
+    "\n",
+    "    # Determine the maximum length\n",
+    "    max_length = max(len(err1), len(err2))\n",
+    "\n",
+    "    # Pad the shorter list with zeros\n",
+    "    err1 = np.pad(err1, (0, max_length - len(err1)), \"constant\")\n",
+    "    err2 = np.pad(err2, (0, max_length - len(err2)), \"constant\")\n",
+    "\n",
+    "    iterations = np.arange(max_length)\n",
+    "\n",
+    "    # Create a single wandb.Table with both GDP and SVD errors\n",
+    "    combined_table = wandb.Table(\n",
+    "        data=[[i, e1, e2] for i, e1, e2 in zip(iterations, err1, err2)],\n",
+    "        columns=[\"iteration\", \"GDP_error\", \"SVD_error\"],\n",
+    "    )\n",
+    "\n",
+    "    # Create a line plot with both GDP and SVD errors\n",
+    "    error_plot = wandb.plot.line(\n",
+    "        table=combined_table,\n",
+    "        x=\"iteration\",\n",
+    "        y=[\"GDP_error\", \"SVD_error\"],\n",
+    "        title=\"GDP vs SVD Error Comparison\",\n",
+    "    )\n",
+    "\n",
+    "    run.log({\"error_comparison\": error_plot})"
    ]
   },
   {
