--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Util & setup"
+    "# Setup"
    ]
   },
   {
@@ -13,42 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# form log list[string], search Error: {err_normalized} pattern and extract the value\n",
-    "# into list\n",
-    "import re\n",
-    "\n",
-    "import torch\n",
-    "\n",
-    "from src.utils.logging_utils import LogCapture\n",
-    "\n",
-    "\n",
-    "def extract_error(log_list, prefix: str = \"Error: \") -> list:\n",
-    "    err_list = []\n",
-    "    for log in log_list:\n",
-    "        if prefix in log:\n",
-    "            err_list.append(float(re.findall(prefix + r\"([0-9.e-]+)\", log)[0]))\n",
-    "\n",
-    "    return err_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "\n",
-    "def plot_singular_values(Ws: tuple[torch.Tensor]):\n",
-    "    for w in Ws:\n",
-    "        s = torch.linalg.svdvals(w)\n",
-    "        plt.plot(s)\n",
-    "    plt.yscale(\"log\")\n",
-    "    plt.xlabel(\"Singular Value Index\")\n",
-    "    plt.ylabel(\"Singular Value\")\n",
-    "    plt.title(\"Singular Values of Weight Matrix\")\n",
-    "    plt.show()"
+    "import torch"
    ]
   },
   {
@@ -59,32 +24,20 @@
    "source": [
     "input_size = 100\n",
     "output_size = 50\n",
-    "batch_size = 1\n",
+    "rank = 10\n",
     "\n",
-    "tol = 1e-4\n",
+    "\n",
+    "batch_size = 1\n",
+    "tol = 1e-8\n",
     "max_iter = 1000\n",
+    "norm_type = \"fro\"\n",
     "\n",
     "# generate low rank matrix\n",
-    "rank = 5\n",
     "w = torch.randn(input_size, output_size)\n",
     "w.clamp_(-1, 1)\n",
     "if rank < min(w.shape):\n",
     "    u, s, v = torch.svd(w)\n",
     "    w = torch.mm(u[:, :rank], torch.mm(torch.diag(s[:rank]), v[:, :rank].t()))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# AnalogTile"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Compare"
    ]
   },
   {
@@ -111,43 +64,60 @@
     "from aihwkit.simulator.presets.configs import IdealizedPreset, PCMPreset, ReRamSBPreset\n",
     "from aihwkit.simulator.presets.devices import IdealizedPresetDevice\n",
     "from aihwkit.simulator.tiles import FloatingPointTile\n",
-    "from aihwkit.simulator.tiles.analog import AnalogTile\n",
+    "\n",
+    "from src.prog_scheme.utils import program_n_log, rpuconf2dict\n",
     "\n",
     "# pre_post_cfg = PrePostProcessingParameter(input_range=InputRangeParameter(enable=True))\n",
-    "device_cfg = ExpStepDevice()\n",
-    "# device_cfg = IdealDevice()\n",
-    "update_cfg = UpdateParameters(pulse_type=PulseType.MEAN_COUNT)\n",
+    "# device_cfg = ExpStepDevice()\n",
+    "device_cfg = IdealDevice()\n",
+    "update_cfg = UpdateParameters(pulse_type=PulseType.NONE)\n",
     "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg)\n",
     "# rpuconfig.forward.is_perfect = True\n",
-    "rpuconfig.device.w_max_dtod = 0\n",
-    "rpuconfig.device.w_min_dtod = 0\n",
+    "# rpuconfig.device.w_max_dtod = 0\n",
+    "# rpuconfig.device.w_min_dtod = 0\n",
     "# rpuconfig = SingleRPUConfig()\n",
+    "conf = {\n",
+    "    **rpuconf2dict(rpuconfig, max_depth=1),\n",
+    "    \"matrix\": {\"input_size\": input_size, \"output_size\": output_size, \"rank\": rank},\n",
+    "    \"methods\": {\n",
+    "        \"tolerance\": tol,\n",
+    "        \"max_iter\": max_iter,\n",
+    "        \"batch_size\": batch_size,\n",
+    "        \"norm_type\": norm_type,\n",
+    "    },\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AnalogTile"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compare & Log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aihwkit.simulator.tiles.analog import AnalogTile\n",
+    "\n",
     "atile = AnalogTile(output_size, input_size, rpu_config=rpuconfig)  # with periphery\n",
     "atile_dic = {}\n",
     "atile.state_dict(atile_dic)\n",
     "atile2 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
-    "atile2.load_state_dict(atile_dic, assign=True)\n",
+    "# atile2.load_state_dict(atile_dic, assign=True)\n",
     "atile3 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
     "atile3.load_state_dict(atile_dic, assign=True)\n",
-    "print(rpuconfig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# rpuconfig.device.__dict__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(atile2.tile.get_info())"
+    "print(atile.tile.get_info())"
    ]
   },
   {
@@ -163,7 +133,10 @@
     "# enroll the programming methods\n",
     "atile.program_weights = gdp2.__get__(atile, TileWithPeriphery)\n",
     "atile2.program_weights = svd.__get__(atile2, TileWithPeriphery)\n",
-    "atile3.program_weights = svd_ekf.__get__(atile3, TileWithPeriphery)"
+    "# atile3.program_weights = svd_ekf.__get__(atile3, TileWithPeriphery)\n",
+    "\n",
+    "tiles = (atile, atile2)\n",
+    "names = (\"gdp2\", \"svd\")"
    ]
   },
   {
@@ -172,10 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with LogCapture() as logc:\n",
-    "    atile.tile.set_weights(w.clone().T)\n",
-    "    atile.program_weights(batch_size=batch_size, tolerance=tol, max_iter=max_iter)\n",
-    "    log_list1 = logc.get_log_list()"
+    "err_lists = program_n_log(tiles, w.T, conf.get(\"methods\", {}))"
    ]
   },
   {
@@ -184,11 +154,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with LogCapture() as logc:\n",
-    "    # atile2.set_weights(weight=w, realistic=True)\n",
-    "    atile2.tile.set_weights(w.clone().double().T)\n",
-    "    atile2.program_weights(max_iter=max_iter, tolerance=tol, svd_once=False)\n",
-    "    log_list2 = logc.get_log_list()"
+    "import wandb\n",
+    "\n",
+    "with wandb.init(project=\"prog-scheme\", entity=\"spk\", config=conf, dir=\"../../logs\") as run:\n",
+    "    # Determine the maximum length\n",
+    "\n",
+    "    max_len = max([len(err_list) for err_list in err_lists])\n",
+    "    # Pad the lists with 0s\n",
+    "    for err_list in err_lists:\n",
+    "        err_list += [None] * (max_len - len(err_list))\n",
+    "    # Log the data\n",
+    "    for i in range(max_len):\n",
+    "        run.log({f\"{name}_{norm_type}\": err_list[i] for name, err_list in zip(names, err_lists)})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualize"
    ]
   },
   {
@@ -197,10 +181,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with LogCapture() as logc:\n",
-    "#     atile3.tile.set_weights(w.clone().T)\n",
-    "#     atile3.program_weights(tolerance=1e-10, max_iter=10)\n",
-    "#     log_list3 = logc.get_log_list()"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from src.prog_scheme.utils import plot_singular_values"
    ]
   },
   {
@@ -214,19 +197,11 @@
     "    w.T - atile2.tile.get_weights(),\n",
     "    # w.T - atile3.tile.get_weights(),\n",
     ")\n",
-    "plot_singular_values(W)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plot_singular_values(W)\n",
     "print(\n",
     "    f\"nuclear norm of \\n\"\n",
-    "    f\"atile: {torch.linalg.matrix_norm(W[0], ord='nuc')},\\n\"\n",
-    "    f\"atile2: {torch.linalg.matrix_norm(W[1], ord='nuc')},\\n\"\n",
+    "    f\"atile: {torch.linalg.matrix_norm(W[0], ord=norm_type)},\\n\"\n",
+    "    f\"atile2: {torch.linalg.matrix_norm(W[1], ord=norm_type)},\\n\"\n",
     "    # f\"atile3: {torch.linalg.matrix_norm(W[2], ord='nuc')}\"\n",
     ")"
    ]
@@ -237,22 +212,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_list1[-10:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for log in [log_list1, log_list2]:\n",
-    "    err = extract_error(log)\n",
+    "for err in err_lists:\n",
     "    plt.semilogy(err)\n",
     "# set legend\n",
     "plt.legend([f\"gdp-seq(batchsize {batch_size})\", \"svd\"])\n",
     "plt.xlabel(\"Iteration\")\n",
-    "plt.ylabel(\"Nuclear norm of weight error (sum of singular values)\")\n",
+    "plt.ylabel(f\"{norm_type} norm of weight error\")\n",
     "plt.title(\"Error vs Iteration @ {}x{}, rank={}\".format(input_size, output_size, rank))\n",
     "plt.show()"
    ]
@@ -261,96 +226,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## WandB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rpuconf2dict(rpuconfig, max_depth=2, current_depth=0):\n",
-    "    if current_depth > max_depth:\n",
-    "        return rpuconfig\n",
-    "    result = {}\n",
-    "    for key, val in rpuconfig.__dict__.items():\n",
-    "        if isinstance(val, (float, int, str, bool)):\n",
-    "            result[key] = val\n",
-    "        elif isinstance(val, type):\n",
-    "            result[key] = repr(val)\n",
-    "        else:\n",
-    "            result[key] = rpuconf2dict(val, max_depth, current_depth + 1)\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!wandb login"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conf = {\n",
-    "    **rpuconf2dict(rpuconfig, max_depth=1),\n",
-    "    \"matrix\": {\"input_size\": input_size, \"output_size\": output_size, \"rank\": rank},\n",
-    "    \"methods\": {\"tolerance\": tol, \"max_iter\": max_iter, \"batch_size\": batch_size},\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "import wandb\n",
-    "\n",
-    "with wandb.init(project=\"prog-scheme\", entity=\"spk\", config=conf, dir=\"../../logs\") as run:\n",
-    "    err1 = extract_error(log_list1)  # GDP error\n",
-    "    err2 = extract_error(log_list2)  # SVD error\n",
-    "\n",
-    "    # Determine the maximum length\n",
-    "    max_length = max(len(err1), len(err2))\n",
-    "\n",
-    "    # Pad the shorter list with zeros\n",
-    "    err1 = np.pad(err1, (0, max_length - len(err1)), \"constant\")\n",
-    "    err2 = np.pad(err2, (0, max_length - len(err2)), \"constant\")\n",
-    "\n",
-    "    iterations = np.arange(max_length)\n",
-    "\n",
-    "    # Create a single wandb.Table with both GDP and SVD errors\n",
-    "    combined_table = wandb.Table(\n",
-    "        data=[[i, e1, e2] for i, e1, e2 in zip(iterations, err1, err2)],\n",
-    "        columns=[\"iteration\", \"GDP_error\", \"SVD_error\"],\n",
-    "    )\n",
-    "\n",
-    "    # Create a line plot with both GDP and SVD errors\n",
-    "    error_plot = wandb.plot.line(\n",
-    "        table=combined_table,\n",
-    "        x=\"iteration\",\n",
-    "        y=[\"GDP_error\", \"SVD_error\"],\n",
-    "        title=\"GDP vs SVD Error Comparison\",\n",
-    "    )\n",
-    "\n",
-    "    run.log({\"error_comparison\": error_plot})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## GDP batch-size effect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.prog_scheme.utils import extract_error\n",
+    "from src.utils.logging_utils import LogCapture"
    ]
   },
   {
